--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-test
+<h1>Karma Offsettings </h1>
+<p>This is Nikhils website</p>
+<p><a href="https://www.NikhilMath.com">NikhilMath.com</a></p>
 </body>
 
 </html>
