--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Karma Offsettings </h1>
+<h1>Purchase Karma Offsets</h1>
 <p>This is Nikhils website</p>
 <p><a href="https://www.NikhilMath.com">NikhilMath.com</a></p>
 </body>
