--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Purchase Karma Offsets - Karma Offsets</title>
 </head>
 
-<body class="m-5">
+<body class="m-5 bg-info">
 <h1>Purchase Karma Offsets</h1>
-<p>Karma Offsetting : An Action to compensate for the emmision of bad karma into the world.</p>
+<p>Karma Offsetting: An Action to compensate for the emmision of bad karma into the world.</p>
 <p><a href="https://www.NikhilMath.com">NikhilMath.com</a></p>
 
 <!-- SCRIPTS -->
