--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Purchase Karma Offsets - Karma Offsets</title>
 </head>
 
-<body class="m-5 bg-info">
-<h1>Purchase Karma Offsets</h1>
+
+<body>
+  <header class="row">
+      <h1 class="display-1 align-middle text-uppercase text-center col">Karma Offsetting</h1>
+      <p class="lead">An Action to compensate for the emmision of bad karma into the world.</p>
+      <!-- <p class="lead">Become Karma Neutral</p> -->
+  </header>
+</body>
+
+
+
+<!-- <body class="m-5 container">
+<h1 class="display-4">Purchase Karma Offsets</h1>
+<h2 class="lead">Become Karma Neutral</h2>
 <p>Karma Offsetting: An Action to compensate for the emmision of bad karma into the world.</p>
 <p><a href="https://www.NikhilMath.com">NikhilMath.com</a></p>
+<div>hello</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#0099ff" fill-opacity="1"
+    d="M0,128L80,149.3C160,171,320,213,480,213.3C640,213,800,171,960,149.3C1120,128,1280,128,1360,128L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+  </path>
+</svg> -->
 
 <!-- SCRIPTS -->
 
