--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Permanent+Marker&display=swap"
+  rel="stylesheet">
   <title>Purchase Karma Offsets - Karma Offsets</title>
 </head>
 
 
 <body>
   <header class="row">
-      <h1 class="display-1 align-middle text-uppercase text-center col">Karma Offsetting</h1>
-      <p class="lead">An Action to compensate for the emmision of bad karma into the world.</p>
-      <!-- <p class="lead">Become Karma Neutral</p> -->
+    <h1 class="display-1 justify-items-center text-uppercase text-center">Karma Offsetting</h1>
+    <p class="lead">An action to compensate for the emmision of bad karma into the world.</p>
+    <!-- <p class="lead">Become Karma Neutral</p> -->
   </header>
 </body>
 
