--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="row align-items-center">
-    <h1 class="col display-1 text-uppercase text-center">Karma Offsetting:</h1>
+    <h1 class="col display-1 text-uppercase text-center text-responsive">Karma Offsetting:</h1>
     <p class="display-6 col">An action to compensate for the emmision of bad karma into the world.</p>
     <!-- <p class="lead">Become Karma Neutral</p> -->
   </header>
