--- a/index.html
+++ b/index.html
@@ -15,31 +15,16 @@
   <title>Purchase Karma Offsets - Karma Offsets</title>
 </head>
 
-
 <body>
-  <header class="row align-items-center">
-    <h1 class="col display-1 text-uppercase text-center text-responsive">Karma Offsetting:</h1>
-    <p class="display-6 col">An action to compensate for the emmision of bad karma into the world.</p>
+  <header class="row justify-content-center">
+    <h1 class="test">Karma Offsetting:</h1>
+    <p class="test">An action to compensate for the emmision of bad karma into the world.</p>
     <!-- <p class="lead">Become Karma Neutral</p> -->
   </header>
 </body>
 
 
-
-<!-- <body class="m-5 container">
-<h1 class="display-4">Purchase Karma Offsets</h1>
-<h2 class="lead">Become Karma Neutral</h2>
-<p>Karma Offsetting: An Action to compensate for the emmision of bad karma into the world.</p>
-<p><a href="https://www.NikhilMath.com">NikhilMath.com</a></p>
-<div>hello</div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#0099ff" fill-opacity="1"
-    d="M0,128L80,149.3C160,171,320,213,480,213.3C640,213,800,171,960,149.3C1120,128,1280,128,1360,128L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
-  </path>
-</svg> -->
-
 <!-- SCRIPTS -->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
